--- a/app/src/main/res/layout/fragment_geolocalisation.xml
+++ b/app/src/main/res/layout/fragment_geolocalisation.xml
@@ -6,7 +6,7 @@
     android:layout_gravity="center"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.paiement.PaiementFragment">
+    tools:context=".ui.localisation.GeolocalisationFragment">
 
     <ImageView
         android:layout_width="200dp"
