--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -25,9 +25,9 @@
 
     <fragment
         android:id="@+id/nav_paiement"
-        android:name="ca.ulaval.ima.residencemanager.ui.paiement.PaiementFragment"
+        android:name="ca.ulaval.ima.residencemanager.ui.localisation.GeolocalisationFragment"
         android:label="Paiement"
-        tools:layout="@layout/fragment_paiement" />
+        tools:layout="@layout/fragment_geolocalisation" />
 
     <fragment
         android:id="@+id/nav_panne"
